[gd_scene load_steps=12 format=3 uid="uid://cdnrhxx85gis6"]

[ext_resource type="Script" path="res://scripts/tools/Level.gd" id="1_yxhan"]
[ext_resource type="Script" path="res://scripts/tools/ClickerManager.gd" id="2_grbvu"]
[ext_resource type="PackedScene" uid="uid://bjw8tcgwdvt54" path="res://scenes/scene_managment/auto_loader.tscn" id="3_e3x6g"]
[ext_resource type="Script" path="res://scripts/talent_tree/nodes/upgrade_tree_manager.gd" id="4_75dd6"]
[ext_resource type="Script" path="res://scripts/player/CameraManager.gd" id="4_u6g0e"]
[ext_resource type="Script" path="res://scripts/talent_tree/resource_button.gd" id="6_1nagx"]
[ext_resource type="PackedScene" uid="uid://daplsoc7ofciu" path="res://scenes/game_chapters/prequel_clicker/clicker_nodes/generator_node_template.tscn" id="6_iu4ce"]
[ext_resource type="Script" path="res://scripts/talent_tree/ClickerUI.gd" id="6_veeby"]
[ext_resource type="PackedScene" uid="uid://btweifvc3amdj" path="res://scenes/game_chapters/prequel_clicker/clicker_nodes/story_node_template.tscn" id="7_a0kji"]
[ext_resource type="PackedScene" uid="uid://jvyejru5ragb" path="res://scenes/game_chapters/prequel_clicker/clicker_nodes/modifier_node_template.tscn" id="8_6nukx"]
[ext_resource type="PackedScene" uid="uid://dg0k2wxud2cn3" path="res://assets/nodes/ui/clicker/buy_window.tscn" id="11_imrjp"]

[node name="Level" type="Node2D"]
script = ExtResource("1_yxhan")
level_name = "Prequel"

[node name="AutoLoader" parent="." instance=ExtResource("3_e3x6g")]

[node name="ClickerManager" type="Node" parent="."]
script = ExtResource("2_grbvu")

[node name="CameraManager" type="Camera2D" parent="."]
position = Vector2(272, 481)
script = ExtResource("4_u6g0e")
can_pan = true
can_zoom = true

[node name="GameObjects" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="ProgressTreeManager" type="Node2D" parent="GameObjects"]
script = ExtResource("4_75dd6")

[node name="1_B_Open" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 232.0
offset_top = 138.0
offset_right = 312.0
offset_bottom = 218.0
node_id = 1
node_name = &"Откройте ячейку"
max_level = 1
is_hidden = true
next_nodes = [NodePath("21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="21_M_Signal" parent="GameObjects/ProgressTreeManager/1_B_Open" node_paths=PackedStringArray("parent_node") instance=ExtResource("8_6nukx")]
offset_left = -231.0
offset_top = 1.0
offset_right = -151.0
offset_bottom = 81.0
parent_node = NodePath("..")
node_id = 21
node_name = &"Электрический Сигнал"
is_hidden = true
"Unlock Conditions/Level Required" = 1

[node name="22_M_Transmitter" parent="GameObjects/ProgressTreeManager/1_B_Open" node_paths=PackedStringArray("parent_node") instance=ExtResource("8_6nukx")]
offset_left = 229.0
offset_top = 1.0
offset_right = 309.0
offset_bottom = 81.0
parent_node = NodePath("..")
node_id = 22
node_name = &"Передатчик"
is_hidden = true
"Unlock Conditions/Level Required" = 1

[node name="2_B_Who?" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 231.0
offset_top = 293.0
offset_right = 311.0
offset_bottom = 373.0
node_id = 2
node_name = &"Кто я?"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="3_B_From?" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 231.0
offset_top = 472.0
offset_right = 311.0
offset_bottom = 552.0
node_id = 3
node_name = &"Откуда"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="4_B_Where?" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 231.0
offset_top = 617.0
offset_right = 311.0
offset_bottom = 697.0
node_id = 4
node_name = &"Куда я иду?"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="5_B_Welcome" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 231.0
offset_top = 796.0
offset_right = 311.0
offset_bottom = 876.0
node_id = 5
node_name = &"Добро пожаловать в \"Лето\"!"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="23_M_Activity" parent="GameObjects/ProgressTreeManager/5_B_Welcome" node_paths=PackedStringArray("parent_node") instance=ExtResource("8_6nukx")]
offset_left = 230.0
offset_top = -1.0
offset_right = 310.0
offset_bottom = 79.0
parent_node = NodePath("../../1_B_Open")
node_id = 23
node_name = &"Деятельность"
is_hidden = true
"Unlock Conditions/Level Required" = 1

[node name="24_M_Statistics" parent="GameObjects/ProgressTreeManager/5_B_Welcome" node_paths=PackedStringArray("parent_node") instance=ExtResource("8_6nukx")]
offset_left = 483.0
offset_top = -1.0
offset_right = 563.0
offset_bottom = 79.0
parent_node = NodePath("../../1_B_Open")
node_id = 24
node_name = &"Статистика"
is_hidden = true
"Unlock Conditions/Level Required" = 1

[node name="25_M_Offices" parent="GameObjects/ProgressTreeManager/5_B_Welcome" node_paths=PackedStringArray("parent_node") instance=ExtResource("8_6nukx")]
offset_left = 717.0
offset_top = -1.0
offset_right = 797.0
offset_bottom = 79.0
parent_node = NodePath("../../1_B_Open")
node_id = 25
node_name = &"Офисы"
is_hidden = true
"Unlock Conditions/Level Required" = 1

[node name="26_M_Letov" parent="GameObjects/ProgressTreeManager/5_B_Welcome" node_paths=PackedStringArray("parent_node") instance=ExtResource("8_6nukx")]
offset_left = 717.0
offset_top = -183.0
offset_right = 797.0
offset_bottom = -103.0
parent_node = NodePath("../../1_B_Open")
node_id = 26
node_name = &"ЛЕТОВ"
is_hidden = true
"Unlock Conditions/Level Required" = 1

[node name="27_M_CivilDefense" parent="GameObjects/ProgressTreeManager/5_B_Welcome" node_paths=PackedStringArray("parent_node") instance=ExtResource("8_6nukx")]
offset_left = 717.0
offset_top = -377.0
offset_right = 797.0
offset_bottom = -297.0
parent_node = NodePath("../../1_B_Open")
node_id = 27
node_name = &"Гражданская оборона"
is_hidden = true
"Unlock Conditions/Level Required" = 1

[node name="28_M_MegaBuilding" parent="GameObjects/ProgressTreeManager/5_B_Welcome" node_paths=PackedStringArray("parent_node") instance=ExtResource("8_6nukx")]
offset_left = 938.0
offset_top = -183.0
offset_right = 1018.0
offset_bottom = -103.0
parent_node = NodePath("../../1_B_Open")
node_id = 28
node_name = &"МегаЗдание"
is_hidden = true
"Unlock Conditions/Level Required" = 1

[node name="29_M_Departments" parent="GameObjects/ProgressTreeManager/5_B_Welcome" node_paths=PackedStringArray("parent_node") instance=ExtResource("8_6nukx")]
offset_left = 1157.0
offset_top = -183.0
offset_right = 1237.0
offset_bottom = -103.0
parent_node = NodePath("../../1_B_Open")
node_id = 29
node_name = &"Отделы"
is_hidden = true
"Unlock Conditions/Level Required" = 1

[node name="30_M_Press" parent="GameObjects/ProgressTreeManager/5_B_Welcome" node_paths=PackedStringArray("parent_node") instance=ExtResource("8_6nukx")]
offset_left = 1157.0
offset_top = -387.0
offset_right = 1237.0
offset_bottom = -307.0
parent_node = NodePath("../../1_B_Open")
node_id = 30
node_name = &"ПрессСлужба"
is_hidden = true
"Unlock Conditions/Level Required" = 1

[node name="31_M_CityMonitoring" parent="GameObjects/ProgressTreeManager/5_B_Welcome" node_paths=PackedStringArray("parent_node") instance=ExtResource("8_6nukx")]
offset_left = 1320.0
offset_top = -386.0
offset_right = 1400.0
offset_bottom = -306.0
parent_node = NodePath("../../1_B_Open")
node_id = 31
node_name = &"Городской Мониторинг"
is_hidden = true
"Unlock Conditions/Level Required" = 1

[node name="32_M_Cryonics" parent="GameObjects/ProgressTreeManager/5_B_Welcome" node_paths=PackedStringArray("parent_node") instance=ExtResource("8_6nukx")]
offset_left = 1484.0
offset_top = -386.0
offset_right = 1564.0
offset_bottom = -306.0
parent_node = NodePath("../../1_B_Open")
node_id = 32
node_name = &"Крионика"
is_hidden = true
"Unlock Conditions/Level Required" = 1

[node name="33_M_AndOther" parent="GameObjects/ProgressTreeManager/5_B_Welcome" node_paths=PackedStringArray("parent_node") instance=ExtResource("8_6nukx")]
offset_left = 1660.0
offset_top = -385.0
offset_right = 1740.0
offset_bottom = -305.0
parent_node = NodePath("../../1_B_Open")
node_id = 33
node_name = &"И другие"
is_hidden = true
"Unlock Conditions/Level Required" = 1

[node name="6_B_Helper" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 231.0
offset_top = 1039.0
offset_right = 311.0
offset_bottom = 1119.0
node_id = 6
node_name = &"Голосовая помощница N"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="7_B_Reals" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 231.0
offset_top = 1277.0
offset_right = 311.0
offset_bottom = 1357.0
node_id = 7
node_name = &"Реалы"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="8_B_Experiment" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 231.0
offset_top = 1438.0
offset_right = 311.0
offset_bottom = 1518.0
node_id = 8
node_name = &"ЭКСПЕРИМЕНТ"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="9_B_Subscribe" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 231.0
offset_top = 1602.0
offset_right = 311.0
offset_bottom = 1682.0
node_id = 9
node_name = &"Подписаться"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="10_G_SendReport" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes") instance=ExtResource("6_iu4ce")]
offset_left = 231.0
offset_top = 1806.0
offset_right = 311.0
offset_bottom = 1886.0
node_id = 10
node_name = &"Отправить Отчет"
max_level = 1000
is_hidden = true
is_unlocked = true
strength = 2
strength_increase = 2
mult_bool = false
unlock_cost = 10
unlock_increase = 10
reveal_on_nodes_revealed = false
reveal_on_resource_amount_reached = true
unlock_on_resource_amount_reached = true
unlock_on_nodes_level_reached = false
next_nodes = [NodePath("../1_B_Open"), NodePath("")]
"Reveal Conditions/Resource Amount Required" = 10
"Unlock Conditions/Resource Amount Required" = 10

[node name="11_B_Branches" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 230.0
offset_top = 1988.0
offset_right = 310.0
offset_bottom = 2068.0
node_id = 11
node_name = &"Ветки"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="12_B_Matrix?" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = -148.0
offset_top = 2153.0
offset_right = -68.0
offset_bottom = 2233.0
node_id = 12
node_name = &"Это что, как в матрице?"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="13_B_Care" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 230.0
offset_top = 2152.0
offset_right = 310.0
offset_bottom = 2232.0
node_id = 13
node_name = &"С заботой о Вас!"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="14_B_OurMission" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 621.0
offset_top = 2154.0
offset_right = 701.0
offset_bottom = 2234.0
node_id = 14
node_name = &"Наша миссия"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="15_B_NoOneWantsToDie" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 621.0
offset_top = 2341.0
offset_right = 701.0
offset_bottom = 2421.0
node_id = 15
node_name = &"Никто не хотел умирать"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="16_B_LongLife" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 621.0
offset_top = 2549.0
offset_right = 701.0
offset_bottom = 2629.0
node_id = 16
node_name = &"Долгая счастливая жизнь"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="17_B_MarsChronicles" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 621.0
offset_top = 2805.0
offset_right = 701.0
offset_bottom = 2885.0
node_id = 17
node_name = &"Марсианские хроники нас"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="18_B_EveryoneDot" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 621.0
offset_top = 3061.0
offset_right = 701.0
offset_bottom = 3141.0
node_id = 18
node_name = &"Каждому из нас."
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="19_B_EveryoneQuestion" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 621.0
offset_top = 3312.0
offset_right = 701.0
offset_bottom = 3392.0
node_id = 19
node_name = &"Каждому из нас?"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="20_B_EveryoneExclaim" parent="GameObjects/ProgressTreeManager" node_paths=PackedStringArray("next_nodes", "previous_nodes") instance=ExtResource("7_a0kji")]
offset_left = 621.0
offset_top = 3576.0
offset_right = 701.0
offset_bottom = 3656.0
node_id = 20
node_name = &"Каждому из нас!"
max_level = 1
is_hidden = true
next_nodes = [NodePath("../1_B_Open/21_M_Signal"), NodePath("")]
previous_nodes = [NodePath("../10_G_SendReport")]
"Unlock Conditions/Level Required" = 1

[node name="GameScreen" type="CanvasLayer" parent="."]

[node name="Screen" type="MarginContainer" parent="GameScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("6_veeby")

[node name="ClickInfo" type="HBoxContainer" parent="GameScreen/Screen"]
layout_mode = 2
size_flags_vertical = 0

[node name="ExitButton" type="Button" parent="GameScreen/Screen/ClickInfo"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Exit"

[node name="VBoxContainer" type="VBoxContainer" parent="GameScreen/Screen/ClickInfo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TapsScore" type="Label" parent="GameScreen/Screen/ClickInfo/VBoxContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 1

[node name="TapsStrength" type="Label" parent="GameScreen/Screen/ClickInfo/VBoxContainer"]
layout_mode = 2
text = "STRENGTH"
horizontal_alignment = 1

[node name="AutoScore" type="Label" parent="GameScreen/Screen/ClickInfo/VBoxContainer"]
layout_mode = 2
text = "Auto Score"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="GameScreen/Screen/ClickInfo/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "вот тут у нас длиннющее описание"
fit_content = true
tab_size = 5

[node name="ControlButtons" type="HBoxContainer" parent="GameScreen/Screen"]
layout_mode = 2
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="GameScreen/Screen/ControlButtons"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 10

[node name="TapButton" type="Button" parent="GameScreen/Screen/ControlButtons/VBoxContainer" groups=["resource_buttons"]]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
text = "TAP"
script = ExtResource("6_1nagx")

[node name="UpgradeButton" type="Button" parent="GameScreen/Screen/ControlButtons/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Upgrade"

[node name="AutoButton" type="Button" parent="GameScreen/Screen/ControlButtons/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Auto"

[node name="BuyWindow" parent="GameScreen/Screen" instance=ExtResource("11_imrjp")]
layout_mode = 2

[connection signal="pressed" from="GameScreen/Screen/ClickInfo/ExitButton" to="." method="return_to_main_menu"]
[connection signal="pressed" from="GameScreen/Screen/ControlButtons/VBoxContainer/UpgradeButton" to="ClickerManager" method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="GameScreen/Screen/ControlButtons/VBoxContainer/AutoButton" to="ClickerManager" method="_on_auto_button_pressed"]
