[gd_scene load_steps=10 format=3 uid="uid://34axhhhrme4h"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_hr80h"]
[ext_resource type="PackedScene" uid="uid://c6au4ft6g5mgf" path="res://scenes/tilemap_scenes/battle_arena.tscn" id="2_56hj0"]
[ext_resource type="Script" path="res://scripts/player/ActionPointsBar.gd" id="3_bfepx"]
[ext_resource type="Script" path="res://scripts/player/MovePointsBar.gd" id="4_6q0mc"]
[ext_resource type="PackedScene" uid="uid://bdcys2bwnj5e5" path="res://assets/prefabs/UI/grenade_button.tscn" id="5_u6iig"]
[ext_resource type="PackedScene" uid="uid://oxwjndfopy8r" path="res://assets/prefabs/UI/punch_button.tscn" id="6_eqdxq"]
[ext_resource type="Script" path="res://scripts/scene_manager/BackButton.gd" id="7_b3s6c"]
[ext_resource type="Script" path="res://scripts/player/CameraManager.gd" id="8_1blvn"]

[sub_resource type="LabelSettings" id="LabelSettings_ljfbr"]
font_color = Color(0, 0, 0, 1)

[node name="ArenaScene" type="Node"]
metadata/SceneType = "Arena"

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_hr80h")

[node name="BattleArena" parent="." instance=ExtResource("2_56hj0")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(270, 480)
limit_left = -540
limit_top = -200
limit_right = 1080
limit_bottom = 1080
editor_draw_limits = true
script = ExtResource("8_1blvn")
boundsUpperOffset = 300

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 291.0
offset_bottom = -44.0
grow_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
text = "Очки действий"

[node name="AP" type="ProgressBar" parent="CanvasLayer/UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
show_percentage = false
script = ExtResource("3_bfepx")

[node name="APCount" type="Label" parent="CanvasLayer/UI/VBoxContainer/AP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "4/4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
text = "Очки движений"

[node name="MP" type="ProgressBar" parent="CanvasLayer/UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
show_percentage = false
script = ExtResource("4_6q0mc")

[node name="MPCount" type="Label" parent="CanvasLayer/UI/VBoxContainer/MP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "5/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnButton" type="Button" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
text = "Закончить ход"

[node name="Actions" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_bottom = -48.0
grow_horizontal = 0
grow_vertical = 2
alignment = 2

[node name="Grenade" parent="CanvasLayer/UI/Actions" instance=ExtResource("5_u6iig")]
layout_mode = 2

[node name="Punch" parent="CanvasLayer/UI/Actions" instance=ExtResource("6_eqdxq")]
layout_mode = 2

[node name="ActionHint" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -235.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Описание действия"
label_settings = SubResource("LabelSettings_ljfbr")
horizontal_alignment = 1

[node name="GETBACK" type="Button" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 130.0
offset_bottom = 50.0
text = "GETBACK"
script = ExtResource("7_b3s6c")

[connection signal="Player_Critter_Added" from="GameManager" to="CanvasLayer/UI/VBoxContainer/AP" method="On_Player_Critter_Spawned"]
[connection signal="Player_Critter_Added" from="GameManager" to="CanvasLayer/UI/VBoxContainer/MP" method="On_Player_Critter_Spawned"]
[connection signal="pressed" from="CanvasLayer/UI/TurnButton" to="GameManager" method="switch_turns"]
